# nova-prompt-optimizer

./: .gitignore  README.md  build.sh  fix_evaluation_loop.py  pyproject.toml  requirements.txt  run_optimization_safely.py  test_sample_generation.py
.amazonq/docs/: baseline-evaluation-fix.md  bedrock-calls-analysis.md  nova-sdk-workflow.md  optimized-prompt-builder-design.md  rate-limiting-analysis.md  refactoring-plan.md
.amazonq/features/: MetricBuilder.md  ai-dataset-generation.md  new-feature-template.md
.amazonq/rules/: DEVELOPMENT_RULES.md  Development.md  Styling.md
.github/workflows/: ci.yml
claude-analysis/: API_REFERENCE.md  CODEBASE_ANALYSIS.md  DEVELOPMENT_GUIDE.md  LIGHTWEIGHT_FRONTEND_OPTIONS.md  README.md  TECHNICAL_ARCHITECTURE.md
docs/: MULTIMODAL_SUPPORT.md  Optimizers.md
frontend/: .coverage  .sesskey  FEATURES.md  README.md  add_sample_prompts.py  app.py  batched_evaluator.py  check_structure.py  config.py  database.py  dataset_conversation.py  fix_buttons.py  flexible_generator.py  health_check.py  icons.py  install.sh  metric_service.py  metric_validator.py  optimization_config_opt_1be567ea.json  optimization_config_opt_279ab2ce.json  optimization_config_opt_3b0b33a2.json  optimization_config_opt_58f5eb20.json  optimization_config_opt_7524a14d.json  optimization_config_opt_89705614.json  optimization_config_opt_b541ff43.json  prompt_templates.py  requirements-test.txt  review_styling.py  sample_generator.py  sdk_worker.py  setup.py  simple_routes.py  simple_routes_backup.py  start.sh  temp_dataset_opt_5fcf7ca4.jsonl  test_metric_generation.py
frontend/.amazonq/features/: metrics_generation.md  optimized-prompt-builder.md
frontend/.archive/: .env.template  .sesskey  INSTALL.md  PROJECT_DESIGN.md  README.md  UNUSED_FILES_REPORT.md  app.py.broken  app_backup.py  app_clean.py  app_clean_post.py  app_working.py  data_datasets.json  data_optimizations.json  data_prompts.json  init_db.py  optimization_worker.py  requirements-advanced.txt  requirements-minimal.txt  requirements.txt  sample_data.jsonl  setup.py
frontend/.archive/models/: database.py  prompt.py  user.py
frontend/.archive/routes/: dashboard.py
frontend/components/: layout.py  metrics_page.py  navbar.py  prompt_builder.py  ui.py
frontend/docs/: instructor-implementation-plan.md  shad4html-component-rules.md
frontend/migrations/: add_prompt_builder.py
frontend/optimized_prompts/opt_0c8e1d23/: few_shot.json  system_prompt.txt
frontend/optimized_prompts/opt_1947a527/: few_shot.json  system_prompt.txt
frontend/optimized_prompts/opt_1c798fba/: few_shot.json  system_prompt.txt
frontend/optimized_prompts/opt_43752e8b/: few_shot.json  system_prompt.txt  user_prompt.txt
frontend/routes/: dataset_generator.py  datasets.py  metrics.py  metrics_infer_assets.py  optimization.py  prompt_builder.py  prompt_generator.py  prompts.py
frontend/services/: metric_service.py  prompt_generator_service.py
frontend/temp_results/: result_1756854373044384.json  result_17568555554099898.json  result_1756856605843391.json  result_17568576396726.json  result_17568599708364742.json
frontend/utils/: simple_rate_limiter.py
src/amzn_nova_prompt_optimizer/: __init__.py  __version__.py
tests/: test_bedrock_converse_compatibility.py  test_comprehensive_validation.py  test_miprov2_integration.py
tests/core/: test_multimodal_e2e.py
tests/integration/: test_separate_adapters_integration.py
ui/: .env.example  README.md  TESTING.md  docker-compose.prod.yml  test-runner.sh
ui/backend/: Dockerfile  pytest.ini  requirements-test.txt
ui/frontend/: Dockerfile  cypress.config.ts  docker-entrypoint.sh  index.html  nginx.conf  package-lock.json  package.json
ui/monitoring/: prometheus.yml
ui/scripts/: deploy.sh
web-simple/: COMPARISON.md  README.md  deploy.py  main.py  requirements.txt
web-simple/templates/: index.html
(+231 files in other folders)
